<resources>
    <string name="app_name">AplikasiPesanMakan</string>

    <string name="your_name">Your Name</string>
    <string name="your_address">Your Address</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Reone Resto</string>
    <string name="nav_header_subtitle">Delicious Food</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_menu">List Menu</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_favorite">Favorite</string>

    <string name="popular_categories">Popular Categories</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="size">Size</string>
    <string name="add_on">AddOn</string>
    <string name="action_clear_cart">Clear Cart</string>

</resources>
